# instructor-embedding

./: .gitignore  README.md  pyproject.toml
InstructorEmbedding/: instructor.py
