[tool.poetry]
name = "InstructorEmbedding"
version = "1.0.2"
description = "Text embedding tool (fork of HKUNLP/instructor-embedding that fixes installation issues in the context of the talemate project.)"
authors = ["Hongjin SU <hjsu@cs.hku.hk>"]
maintainers = ["VeguAITools"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/vegu-ai-tools/instructor-embedding"
repository = "https://github.com/vegu-ai-tools/instructor-embedding"
documentation = "https://github.com/HKUNLP/instructor-embedding"
keywords = ["sentence", "embedding", "text", "nlp", "instructor"]
packages = [{include = "InstructorEmbedding"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
transformers = ">=4.20"
datasets = ">=2.20"
pyarrow = ">=17.0"
numpy = ">=2.0,<3"
requests = ">=2.26"
scikit-learn = ">=1.0.2"
scipy = ">=1.14"
sentence-transformers = ">=3.0.1"
torch = ">=2.0"
tqdm = ">=4.0"
rich = ">=13.0"
huggingface-hub = ">=0.24.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
